--- a/Mechanics/GenTestJig-Mechanics.ipynb
+++ b/Mechanics/GenTestJig-Mechanics.ipynb
@@ -27,10 +27,10 @@
    "id": "stl-bounds-cell",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-13T20:53:47.719390Z",
-     "iopub.status.busy": "2026-02-13T20:53:47.719175Z",
-     "iopub.status.idle": "2026-02-13T20:53:47.833015Z",
-     "shell.execute_reply": "2026-02-13T20:53:47.832593Z"
+     "iopub.execute_input": "2026-02-16T20:49:10.798547Z",
+     "iopub.status.busy": "2026-02-16T20:49:10.798360Z",
+     "iopub.status.idle": "2026-02-16T20:49:10.909062Z",
+     "shell.execute_reply": "2026-02-16T20:49:10.908672Z"
     }
    },
    "outputs": [
@@ -112,15 +112,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e78db0e",
+   "metadata": {},
+   "source": [
+    "## Extract test points\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "testpoints-to-params",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-13T20:53:47.834107Z",
-     "iopub.status.busy": "2026-02-13T20:53:47.834038Z",
-     "iopub.status.idle": "2026-02-13T20:53:47.838825Z",
-     "shell.execute_reply": "2026-02-13T20:53:47.838429Z"
+     "iopub.execute_input": "2026-02-16T20:49:10.910180Z",
+     "iopub.status.busy": "2026-02-16T20:49:10.910105Z",
+     "iopub.status.idle": "2026-02-16T20:49:10.914765Z",
+     "shell.execute_reply": "2026-02-16T20:49:10.914415Z"
     }
    },
    "outputs": [
@@ -178,15 +186,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab0b999b",
+   "metadata": {},
+   "source": [
+    "## Extract center pins\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ce41ff27",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-16T20:49:10.915814Z",
+     "iopub.status.busy": "2026-02-16T20:49:10.915751Z",
+     "iopub.status.idle": "2026-02-16T20:49:10.920374Z",
+     "shell.execute_reply": "2026-02-16T20:49:10.920064Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.2 mm tools: ['T3']\n",
+      "Selected holes: (131.000500, -138.000740) and (182.001160, -72.499220)\n",
+      "Distance: 83.015158 mm\n",
+      "Updated /Users/martin/Git/GenTestJig/Mechanics/params.scad\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_dir = Path(\"Mechanics\") if Path(\"Mechanics\").exists() else Path.cwd()\n",
+    "drl_path = project_dir / \"pcb\" / \"24-clocks_NPTH_drill.drl\"\n",
+    "params_scad = project_dir / \"params.scad\"\n",
+    "\n",
+    "if not drl_path.exists():\n",
+    "    raise FileNotFoundError(f\"Missing drill file: {drl_path}\")\n",
+    "if not params_scad.exists():\n",
+    "    raise FileNotFoundError(f\"Missing params file: {params_scad}. Run previous cells first.\")\n",
+    "\n",
+    "lines = drl_path.read_text(encoding=\"utf-8\", errors=\"ignore\").splitlines()\n",
+    "\n",
+    "units = None\n",
+    "tool_diam_mm = {}\n",
+    "active_tool = None\n",
+    "holes_by_tool = {}\n",
+    "\n",
+    "for raw in lines:\n",
+    "    line = raw.strip()\n",
+    "    if not line or line.startswith(\";\"):\n",
+    "        continue\n",
+    "\n",
+    "    if line == \"INCH\":\n",
+    "        units = \"INCH\"\n",
+    "        continue\n",
+    "    if line == \"METRIC\":\n",
+    "        units = \"METRIC\"\n",
+    "        continue\n",
+    "\n",
+    "    if line.startswith(\"T\") and \"C\" in line:\n",
+    "        t, c = line.split(\"C\", 1)\n",
+    "        tool = t.strip()\n",
+    "        diam = float(c.strip())\n",
+    "        if units == \"INCH\":\n",
+    "            diam *= 25.4\n",
+    "        tool_diam_mm[tool] = diam\n",
+    "        continue\n",
+    "\n",
+    "    if line.startswith(\"T\") and line[1:].isdigit():\n",
+    "        active_tool = line\n",
+    "        holes_by_tool.setdefault(active_tool, [])\n",
+    "        continue\n",
+    "\n",
+    "    if line.startswith(\"X\") and \"Y\" in line and active_tool:\n",
+    "        x_part, y_part = line[1:].split(\"Y\", 1)\n",
+    "        x = float(x_part)\n",
+    "        y = float(y_part)\n",
+    "        if units == \"INCH\":\n",
+    "            x *= 25.4\n",
+    "            y *= 25.4\n",
+    "        holes_by_tool[active_tool].append((x, y))\n",
+    "\n",
+    "if units is None:\n",
+    "    raise ValueError(\"Could not determine drill units (INCH/METRIC).\")\n",
+    "\n",
+    "target_tools = [t for t, d in tool_diam_mm.items() if abs(d - 3.2) <= 0.15]\n",
+    "if not target_tools:\n",
+    "    raise ValueError(f\"No ~3.2 mm tools found. Tools (mm): {tool_diam_mm}\")\n",
+    "\n",
+    "holes = []\n",
+    "for t in target_tools:\n",
+    "    holes.extend(holes_by_tool.get(t, []))\n",
+    "\n",
+    "if len(holes) < 2:\n",
+    "    raise ValueError(f\"Need at least 2 candidate holes, found {len(holes)}\")\n",
+    "\n",
+    "best = None\n",
+    "best_d2 = -1.0\n",
+    "for i in range(len(holes)):\n",
+    "    x1, y1 = holes[i]\n",
+    "    for j in range(i + 1, len(holes)):\n",
+    "        x2, y2 = holes[j]\n",
+    "        d2 = (x2 - x1) ** 2 + (y2 - y1) ** 2\n",
+    "        if d2 > best_d2:\n",
+    "            best_d2 = d2\n",
+    "            best = ((x1, y1), (x2, y2))\n",
+    "\n",
+    "(p1, p2) = best\n",
+    "(x1, y1), (x2, y2) = p1, p2\n",
+    "\n",
+    "updates = [\n",
+    "    f\"pcb_center_pin_1_x = {x1:.6f};\",\n",
+    "    f\"pcb_center_pin_1_y = {y1:.6f};\",\n",
+    "    f\"pcb_center_pin_2_x = {x2:.6f};\",\n",
+    "    f\"pcb_center_pin_2_y = {y2:.6f};\",\n",
+    "    f\"pcb_center_pins_xy = [[{x1:.6f}, {y1:.6f}], [{x2:.6f}, {y2:.6f}]];\",\n",
+    "]\n",
+    "\n",
+    "existing = params_scad.read_text(encoding=\"utf-8\")\n",
+    "prefixes = (\n",
+    "    \"pcb_center_pin_1_x\",\n",
+    "    \"pcb_center_pin_1_y\",\n",
+    "    \"pcb_center_pin_2_x\",\n",
+    "    \"pcb_center_pin_2_y\",\n",
+    "    \"pcb_center_pins_xy\",\n",
+    ")\n",
+    "filtered = [ln for ln in existing.splitlines() if not ln.strip().startswith(prefixes)]\n",
+    "updated = (\"\\n\".join(filtered).rstrip() + \"\\n\" + \"\\n\".join(updates) + \"\\n\")\n",
+    "params_scad.write_text(updated, encoding=\"utf-8\")\n",
+    "\n",
+    "print(f\"3.2 mm tools: {target_tools}\")\n",
+    "print(f\"Selected holes: ({x1:.6f}, {y1:.6f}) and ({x2:.6f}, {y2:.6f})\")\n",
+    "print(f\"Distance: {math.sqrt(best_d2):.6f} mm\")\n",
+    "print(f\"Updated {params_scad}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8dd0f8d",
+   "metadata": {},
+   "source": [
+    "## Render parts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "a68aff8d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-13T20:53:47.839751Z",
-     "iopub.status.busy": "2026-02-13T20:53:47.839684Z",
-     "iopub.status.idle": "2026-02-13T20:53:48.235860Z",
-     "shell.execute_reply": "2026-02-13T20:53:48.235465Z"
+     "iopub.execute_input": "2026-02-16T20:49:10.921271Z",
+     "iopub.status.busy": "2026-02-16T20:49:10.921215Z",
+     "iopub.status.idle": "2026-02-16T20:49:11.381821Z",
+     "shell.execute_reply": "2026-02-16T20:49:11.381432Z"
     }
    },
    "outputs": [
@@ -198,7 +355,7 @@
       "Geometry cache size in bytes: 2356728\n",
       "CGAL Polyhedrons in cache: 0\n",
       "CGAL cache size in bytes: 0\n",
-      "Total rendering time: 0:00:00.353\n",
+      "Total rendering time: 0:00:00.390\n",
       "Top level object is a 2D object:\n",
       "   Contours:        1\n"
      ]
